[package]
name = "bloom"
description = "Bloom filter implementation in rust"
version = "0.0.1"
authors = ["Nick Lanham <nick@afternight.org>"]
homepage = "https://github.com/nicklan/bloom-rs"
readme = "README.md"
keywords = ["bloom", "filter", "bloomfilter"]
license = "GPL-2.0"

[lib]
name = "bloom"